fix printing not working on mobile due to async JS

--- a/css/print.css
+++ b/css/print.css
@@ -10,7 +10,7 @@ RESOURCES GENERATED BY THE APP */
 
 	img,
 	h1,
-	h2,
+	h2:not(.personalise),
 	h3,
 	form,
 	p:not(.para-print),
@@ -37,7 +37,7 @@ RESOURCES GENERATED BY THE APP */
 
 	.para-print {
 		font-family: "Itim", cursive;
-		line-height: 105%;
+		line-height: 120%;
 		padding: 0;
 		margin: 0 0 10mm 0;
 		/* letter-spacing: 2.5mm; */
